# ECEN-404---Group-14---RF-Triangulation

./: Group14ReceiverSchematic.SchDoc  README.md  Sending.c  Stepper Motor Driver 2.SchDoc
ReceiverAltium/: Group14StepperMotorDriver.SchDoc
ReceiverCode/: ReceiverCode.ino
gui/: NEW AND IMPROVED.py  complete_1.py  complete_2.py  form.ui  gui.code-workspace  newpainttest.py  pyproject.toml  reciever_complete.py  satellite_images.py  test.py  tester.ipynb  ui_form.py  widget.py
gui/GUIdesign/: GUIdesign.qmlproject.qtds
gui/utm/: conversion.py
pycom/: main.py  micropg.py  pybytes_config.json  umqtt.py
